сделал правки в spring и react